removing period in map title

--- a/wisccc/templates/wisccc/wisc_cc_home.html
+++ b/wisccc/templates/wisccc/wisc_cc_home.html
@@ -29,7 +29,7 @@
               <img class="card-img-top" src="{% static 'img/display_wisc_cc_map3_smaller.jpg' %}"
                 alt="Map of participating farmers">
               <div class="card-body">
-                <h5 class="card-title">Map of participating citizen science farmers. </h5>
+                <h5 class="card-title">Map of participating citizen science farmers</h5>
                 <p class="card-text">Do you see your dot? Click each location for more information on cover cropping
                   practices.</p>
                 <a href="{% url 'wisc_cc_map' %}" class="btn btn-primary">Go to the map</a>
