--- a/wisccc/templates/wisccc/wisc_cc_survey.html
+++ b/wisccc/templates/wisccc/wisc_cc_survey.html
@@ -10,6 +10,14 @@
     <div class="card">
       <div class="card-body">
         <h3 class="card-title">Welcome {{ farmer.first_name }} {{ farmer.last_name }}</h3>
+        {% if perms.wisccc.survery_manager %}
+        <hr>
+        <p>Click here to delete this survey.
+          Note this cannot be undone (without tedious work)
+        </p>
+        <a class="btn btn-danger btn-sm" href="{% url 'delete_response' survey_farm.id %}">Delete</a>
+        <hr>
+        {% endif %}
 
         {% if completed_1 and completed_2 and completed_3 and completed_4 and completed_5 and completed_6 %}
 
