finished popups sans photos

--- a/glccp/templates/glccp/map.html
+++ b/glccp/templates/glccp/map.html
@@ -66,11 +66,6 @@
         bottom: 0;
         left: 0;
     } */
-
-    .lorem {
-        font-style: italic;
-        color: #AAA;
-    }
 </style>
 <!-- Legend and selectize styling -->
 <style>
@@ -154,6 +149,16 @@
         border-width: 5px;
         border-style: solid;
         border-color: transparent transparent#2f2f2f transparent;
+    }
+</style>
+<!-- Bringing sidebar up a bit -->
+<style>
+    @media (min-width: 768px) {
+        .sidebar {
+            top: 25px;
+            bottom: 10px;
+            transition: width 500ms;
+        }
     }
 </style>
 
