reformatted popups into tables

--- a/glccp/templates/glccp/map.html
+++ b/glccp/templates/glccp/map.html
@@ -160,6 +160,10 @@
             transition: width 500ms;
         }
     }
+
+    tr:nth-child(even) {
+        background-color: #dddddd;
+    }
 </style>
 
 
