--- a/glccp/templates/glccp/map.html
+++ b/glccp/templates/glccp/map.html
@@ -160,9 +160,18 @@
             transition: width 500ms;
         }
     }
-
+</style>
+<style>
     tr:nth-child(even) {
         background-color: #dddddd;
+    }
+
+    .popupphoto {
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        width: 50%;
+        border: 1px solid #555;
     }
 </style>
 
