adding in logos and updated text for info

--- a/glccp/templates/glccp/map.html
+++ b/glccp/templates/glccp/map.html
@@ -200,6 +200,10 @@
                 Display options
                 <span class="sidebar-close"><i class="fa fa-caret-left"></i></span>
             </h1>
+            <h3>
+                Great Lakes<br>
+                Cover Crops Project
+            </h3>
             <hr>
             <select id="PropertySelection" class="PropSelector selectize-control single selectize-input">
                 <option value="agb">Spring cover crop biomass (lbs/ac)</option>
@@ -259,21 +263,45 @@
                     <i class="fa fa-caret-left"></i>
                 </span>
             </h1>
+            <h3>
+                Great Lakes<br>
+                Cover Crops Project
+            </h3>
             <br>
-            <p>This collaborative project brings together farmers,
-                researchers, and conservation professionals from across
-                the upper Midwest to build a regional database of cover crop performance.
-                Participating farmers receive personalized reports with cover crop data
-                for their fields, and our crowdsourcing approach allows us to identify
-                what types of practices work best across different farming conditions.
+            <p>
+                The Great Lakes Cover Crops Project (GLCCP) is a collaborative
+                project that brings together farmers, researchers,
+                and conservation professionals from across the upper Midwest to build
+                a regional database of cover crop performance.
+                Participating farmers help collect and report cover crop data from their fields,
+                providing a real world snapshot of cover crop use and performance across the region.
+                This map displays data collected as part of GLCCP beginning in 2021, with new data points added each
+                year.
+                Our aim is for this map to serve as a collective learning tool that can aid farmers in identifying
+                strategies for successfully managing cover crops in their fields.
+
+
             </p>
-            <p>Our aim here is to allow people to explore this dataset and understand
-                what practices are being used in different locations.
-                More description.
-            </p>
-            <p>For more information about this project, please see our home page.</p>
-            <p><a href="https://sites.google.com/umich.edu/greatlakescovercropsproject/home" target="_blank"
+            <p>
+                This work is led by the University of Michigan, Michigan Agriculture Advancement,
+                and the University of Missouri, with support from USDA NIFA, NCR-SARE,
+                and the Rackham Program in Public Scholarship. For more information about GLCCP,
+                contact
+                <a href="mailto:etiennesutton@missouri.edu">etiennesutton@missouri.edu</a>
+                or visit our website:
+                <a href="https://sites.google.com/umich.edu/greatlakescovercropsproject/home" target="_blank"
                     rel="noopener noreferrer">https://sites.google.com/umich.edu/greatlakescovercropsproject/home</a>
+            </p>
+            <p>
+                <img src="{% static 'img/MiAA_logo.png'%}" max-height="100%" max-width="100%" height="75px">
+                <img src="{% static 'img/NorthCentral-SARE-logo.jpg'%}" max-height="100%" max-width="100%"
+                    height="75px">
+
+                <img src="{% static 'img/USDA NIFA logo.jpg'%}" max-height="100%" max-width="100%" height="75px">
+                <img src="{% static 'img/MU CRA_logo_cropped.jpeg'%}">
+                <br>
+                <img src="{% static 'img/logo-seas.avif'%}" max-height="100%" max-width="100%" width="250px">
+
             </p>
         </div>
     </div>
