--- a/glccp/templates/glccp/map.html
+++ b/glccp/templates/glccp/map.html
@@ -283,6 +283,12 @@
 
             </p>
             <p>
+                This digital visualization of cover crop data is made possible through the support
+                of the <a href="https://www.michaelfields.org/" target="_blank" rel="noopener noreferrer">
+                    Michael Fields Agricultural Institute </a>
+                and Evansgeospatial.
+            </p>
+            <p>
                 This work is led by the University of Michigan, Michigan Agriculture Advancement,
                 and the University of Missouri, with support from USDA NIFA, NCR-SARE,
                 and the Rackham Program in Public Scholarship. For more information about GLCCP,
@@ -301,6 +307,8 @@
                 <img src="{% static 'img/MU CRA_logo_cropped.jpeg'%}">
                 <br>
                 <img src="{% static 'img/logo-seas.avif'%}" max-height="100%" max-width="100%" width="250px">
+                <img src="{% static 'img/MFAI Logo White on Green BG.png'%}" max-height="100%" max-width="100%"
+                    height="100px">
 
             </p>
         </div>
