restyling homepage and added contact form

--- a/templates/home.html
+++ b/templates/home.html
@@ -103,7 +103,7 @@
         <div class="card-body">
           <h1 class="card-title">Evans Geospatial</h1>
           <p class="card-text">Geospatial data generalists</p>
-          <a href="#" class="btn btn-primary">Get in touch</a>
+          <a href="{% url 'contact' %}" class="btn btn-primary">Get in touch</a>
         </div>
       </div>
       <br>
