--- a/templates/base.html
+++ b/templates/base.html
@@ -30,8 +30,11 @@
       </button>
       <div class="collapse navbar-collapse" id="mainMenu">
         <ul class="nav navbar-nav">
-          <li class="nav-item"><a class="nav-link" href="{% url 'wisc_cc_home' %}">Wisconsin Growers Citizen Science
-              Network</a></li>
+          <li class="nav-item"><a class="nav-link" href="{% url 'wisc_cc_home' %}">WiCCDN</a></li>
+          <li class="nav-item"><a class="nav-link" href="{% url 'glccp_map' %}">GLCCP</a></li>
+          <li class="nav-item"><a class="nav-link" href="{% url 'soils_in_depth' %}">Soils in Depth</a></li>
+          <li class="nav-item"><a class="nav-link" href="{% url 'kanopy_home' %}">Green Cover</a></li>
+
           <!-- <li class="nav-item"><a class="nav-link" href="{% url 'book_list' %}">Add Book</a></li> -->
           <!-- <li class="nav-item"><a class="nav-link" href="#">Kanopy</a></li> -->
         </ul>
@@ -60,10 +63,6 @@
     </div>
   </nav>
   <div class="container">
-    <ol class="breadcrumb my-4">
-      {% block breadcrumb %}
-      {% endblock %}
-    </ol>
     {% block content %}
     {% endblock %}
   </div>
