revised interested pages

--- a/wisccc/templates/wisccc/wisc_cc_interested.html
+++ b/wisccc/templates/wisccc/wisc_cc_interested.html
@@ -29,8 +29,9 @@
                             href="{% url 'wisc_cc_about' %}">"about"</a> section.
                     </p>
                     <p>
-                        If you are interested in participating (next season beginning fall 2025) please email Dan Marzu
-                        at dan.marzu@wisc.edu or Mrill Ingram at mingram@wisc.edu, or share your name and email via this
+                        If you are interested in participating (next season beginning fall 2025) please email <a
+                            href="mailto:dan.marzu@wisc.edu">Dan Marzu</a> or <a href="mailto:mingram@wisc.edu">Mrill
+                            Ingram</a>, or share your name and email via this
                         form:
                     </p>
                     <form method="post" enctype="multipart/form-data">
