--- a/wisccc/templates/wisccc/wisc_cc_interested_agronomist.html
+++ b/wisccc/templates/wisccc/wisc_cc_interested_agronomist.html
@@ -16,21 +16,25 @@
                 <h5>How it works:</h5>
                 <div>
                     <p>
-                        We welcome Wisconsin growers with all levels of experience and production systems interested in
-                        contributing to building better information about cover cropping. Participants fill out a survey
-                        on cover cropping practices and experience, and gather a fall and spring sample from one cover
-                        cropped field. We provide a sampling kit and addressed/stamped mailers for mailing samples to
-                        the labs for analysis. We share fall and spring results on cover crop biomass production and
-                        nutrient quality and forage analyses with each participant, along with a $100 honorarium. To
-                        learn more, visit the interactive cover crop dashboard with a <a
-                            href="{% url 'wisc_cc_map' %}">map</a> and a <a href="{% url 'wisc_cc_graph' %}">graph</a>,
-                        created using the data we've gathered
-                        from farms around Wisconsin, and read more in our <a
-                            href="{% url 'wisc_cc_about' %}">"about"</a> section.
+                        Agronomists/CCAs Needed!
+                        Earn a $50 honorarium participating in a cover crop focus group for agronomists and help test a
+                        new data visualization tool (checkout our
+                        <a href="{% url 'wisc_cc_map' %}">map</a> and <a href="{% url 'wisc_cc_graph' %}">graph</a>).
                     </p>
                     <p>
-                        If you are interested in participating (next season beginning fall 2025) please email Dan Marzu
-                        at dan.marzu@wisc.edu or Mrill Ingram at mingram@wisc.edu, or share your name and email via this
+                        Are you a certified crop advisor or agronomist? What on-farm cover crop data do you find most
+                        useful, and how would you prefer that information be shared?
+                        Eligible participants will be located in Wisconsin or another upper midwestern state
+                        and have at least some experience advising growers on cover crops.
+                    </p>
+                    <p>
+                        Your input will help us develop a tool that shows how different practices and conditions affect
+                        cover crop performance, making sure the data is practical and relevant to your work with
+                        farmers.
+                    </p>
+                    <p>
+                        If you are interested in participating please email <a href="mailto:mingram@wisc.edu">Mrill
+                            Ingram</a>, or share your name and email via this
                         form:
                     </p>
                     <form method="post" enctype="multipart/form-data">
