--- a/wisccc/templates/wisccc/response_table.html
+++ b/wisccc/templates/wisccc/response_table.html
@@ -3,6 +3,7 @@
 
 {% load render_table from django_tables2 %}
 {% load bootstrap4 %}
+{% load crispy_forms_tags %}
 
 {% block content %}
 <style>
@@ -27,11 +28,28 @@
         {% if filter %}
         <div class="col-sm-10">
           <form action="" method="get" class="form">
-            {% bootstrap_form filter.form layout='floating' %}
+            <div class="form-row">
+              <div class="form-group col-md-4 mb-0">
+                {{ filter.form.survey_year|as_crispy_field }}
+              </div>
+              <div class="form-group col-md-4 mb-0">
+                {{ filter.form.farmer__id|as_crispy_field }}
+              </div>
+            </div>
+            <div class="form-row">
+              <div class="form-group col-md-4 mb-0">
+                {{ filter.form.farmer__last_name|as_crispy_field }}
+              </div>
+              <div class="form-group col-md-4 mb-0">
+                {{ filter.form.farmer__user__email|as_crispy_field }}
+              </div>
+            </div>
+
             {% bootstrap_button 'filter' %}
           </form>
         </div>
         {% endif %}
+        <br>
         <div class="col-md-12">
           {% render_table table %}
         </div>
