--- a/wisccc/templates/wisccc/photo_upload.html
+++ b/wisccc/templates/wisccc/photo_upload.html
@@ -23,8 +23,19 @@
     {% include 'wisccc/includes/form_photo.html' %}
 
     <button type="submit" class="noprompt-required btn btn-primary">Submit</button>
-    <a href="{% url 'wisc_cc_survey' %}"><button type="button" class="warn btn btn-secondary">Back to survey home
-            page</button></a>
+    {% if survey_year == 2023 %}
+    <a href="{% url 'response_table' %}">
+        <button type="button" class="warn btn btn-secondary">
+            Back to survey home page
+        </button>
+    </a>
+    {% else %}
+    <a href="{% url 'wisc_cc_survey' %}/{{ survey_year }}/?farmer_id={{ farmer_id }}">
+        <button type="button" class="warn btn btn-secondary">
+            Back to survey edit page
+        </button>
+    </a>
+    {% endif %}
 
 
 </form>
