--- a/wisccc/templates/wisccc/wisc_cc_ancillarydata_review.html
+++ b/wisccc/templates/wisccc/wisc_cc_ancillarydata_review.html
@@ -24,9 +24,19 @@
 
 
   <button type="submit" class="noprompt-required btn btn-primary">Submit</button>
-  <a href="{% url 'response_table' %}"><button type="button" class="warn btn btn-secondary">Back to survey table
-      table
-      page</button></a>
+  {% if survey_year == 2023 %}
+  <a href="{% url 'response_table' %}">
+    <button type="button" class="warn btn btn-secondary">
+      Back to survey home page
+    </button>
+  </a>
+  {% else %}
+  <a href="{% url 'wisc_cc_survey' %}/{{ survey_year }}/?farmer_id={{ farmer_id }}">
+    <button type="button" class="warn btn btn-secondary">
+      Back to survey edit page
+    </button>
+  </a>
+  {% endif %}
 
 
 </form>
