--- a/wisccc/templates/wisccc/wisc_cc_register_3.html
+++ b/wisccc/templates/wisccc/wisc_cc_register_3.html
@@ -32,11 +32,17 @@
                     </a>
                     with any questions.
                 </p>
+                <a href="{% url 'wisc_cc_survey' %}">
+                    <button type="button" class="noprompt-required btn btn-primary">
+                        Start survey
+                    </button>
+                </a>
                 <a href="{% url 'wisc_cc_home' %}">
                     <button type="button" class="noprompt-required btn btn-primary">
                         Return to Homepage
                     </button>
                 </a>
+
 
 
             </div>
