--- a/wisccc/templates/wisccc/wisc_cc_map.html
+++ b/wisccc/templates/wisccc/wisc_cc_map.html
@@ -7,7 +7,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>{% block title %}Evans Geospatial{% endblock %}</title>
+    <title>{% block title %}WiCCDN{% endblock %}</title>
     <link href="https://fonts.googleapis.com/css?family=Peralta" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
 
