--- a/wisccc/templates/wisccc/wisc_cc_graph.html
+++ b/wisccc/templates/wisccc/wisc_cc_graph.html
@@ -6,7 +6,7 @@
 
 <style type="text/css">
     .main-container {
-        max-width: 1000px;
+        max-width: 1200px;
         margin-left: auto;
         margin-right: auto;
         background: white;
@@ -473,7 +473,9 @@
                 </div>
             </div>
         </div>
-
+        <script>
+            var tst = {{ field_ids }};
+        </script>
         <script src="{% static 'js/wisccc_graph.js' %}"></script>
 
 
