adding delete word to button

--- a/wisccc/templates/wisccc/delete_survey_field.html
+++ b/wisccc/templates/wisccc/delete_survey_field.html
@@ -122,7 +122,7 @@
 
                     </div>
 
-                    <input type="submit" value="Yes" class="warn btn btn-danger" />
+                    <input type="submit" value="Delete" class="warn btn btn-danger" />
                     <a href="{% url 'wisc_cc_survey' %}/{{ survey_farm.survey_year }}/?farmer_id={{ farmer.id }}">
                         <button type="button" class="warn btn btn-secondary">
                             Cancel - back to survey edit page
