--- a/wisccc/templates/wisccc/delete_survey_field.html
+++ b/wisccc/templates/wisccc/delete_survey_field.html
@@ -15,8 +15,7 @@
                     {% csrf_token %}
                     <p>Are you sure you want to delete this field for {{ farmer.first_name }} {{ farmer.last_name }}?
                         Please view the below sections and confirm that no important information will be lost if you
-                        delte
-                        this field.
+                        delete this field.
                     </p>
                     <p>Green indicate the section has been completed by the farmer.
                         Yellow indicates the section has not been completed.
