--- a/templates/base.html
+++ b/templates/base.html
@@ -11,9 +11,7 @@
   <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
 
   <link rel="icon" href="{% static 'img/favicon.ico' %}" />
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-    crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.2/jquery.min.js"></script>
   {% block scripts %}{% endblock scripts %}
   {% block stylesheet %}{% endblock %}
 
