--- a/wisccc/templates/wisccc/wisc_cc_graph.html
+++ b/wisccc/templates/wisccc/wisc_cc_graph.html
@@ -119,7 +119,7 @@
     <script type="text/javascript" src='{% static "js/wisccc_legend.js" %}'></script>
     <script type="text/javascript"
         src='https://cdnjs.cloudflare.com/ajax/libs/regression/2.0.1/regression.min.js'></script>
-    <script src="http://code.jquery.com/jquery.js"></script>
+    <!-- <script src="http://code.jquery.com/jquery.js"></script> -->
 
 
     <link rel="stylesheet"
