--- a/wisccc/templates/wisccc/wisc_cc_map.html
+++ b/wisccc/templates/wisccc/wisc_cc_map.html
@@ -12,10 +12,11 @@
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
 
     <link rel="icon" href="{% static 'img/favicon.ico' %}" />
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.2/jquery.min.js"></script> -->
+    <!-- <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>
-    <script src="http://code.jquery.com/jquery-2.1.0.min.js"></script>
+        crossorigin="anonymous"></script> -->
+    <script src="https://code.jquery.com/jquery-2.1.0.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.2.2/d3.min.js"></script>
     <script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3-legend/2.25.6/d3-legend.min.js"
