adding in additional forage quality metrics

--- a/wisccc/templates/wisccc/wisc_cc_graph.html
+++ b/wisccc/templates/wisccc/wisc_cc_graph.html
@@ -328,6 +328,15 @@
                                     <option value="spring_fq_dry_matter">Spring dry matter</option>
                                     <option value="fq_cp">Fall crude protein</option>
                                     <option value="spring_fq_cp">Spring crude protein</option>
+                                    <option value="fq_undfom240">Fall uNDFDom240</option>
+                                    <option value="spring_fq_undfom240">Spring uNDFDom240</option>
+                                    <option value="fq_rfv">Fall relative feed value</option>
+                                    <option value="spring_fq_rfv">Spring relative feed value</option>
+                                    <option value="fq_tdn_adf">Fall TDN ADF</option>
+                                    <option value="spring_fq_tdn_adf">Spring TDN ADF</option>
+                                    <option value="fq_ndfd30">Fall ndfd30</option>
+                                    <option value="spring_fq_ndfd30">Spring ndfd30</option>
+
                                 </select>
                             </p>
                         </div>
