--- a/wisccc/templates/wisccc/wisc_cc_graph.html
+++ b/wisccc/templates/wisccc/wisc_cc_graph.html
@@ -320,8 +320,10 @@
                                 <select id="yFactor" class="group-select selectize-control single selectize-input">
                                     <option value="cc_biomass" selected>Fall biomass</option>
                                     <option value="spring_cc_biomass">Spring biomass</option>
-                                    <option value="fq_milkton">Fall Milkton Value</option>
-                                    <option value="spring_fq_milkton">Spring Milkton Value</option>
+                                    <option value="fq_milkton">Fall milkton value</option>
+                                    <option value="spring_fq_milkton">Spring milkton value</option>
+                                    <option value="total_nitrogen">Fall total nitrogen</option>
+                                    <option value="spring_total_nitrogen">Spring total nitrogen</option>
                                     <option value="fq_rfq">Fall RFQ</option>
                                     <option value="spring_fq_rfq">Spring RFQ</option>
                                     <option value="fq_dry_matter">Fall dry matter</option>
