adding popup table in map

--- a/wisccc/templates/wisccc/wisc_cc_map.html
+++ b/wisccc/templates/wisccc/wisc_cc_map.html
@@ -156,6 +156,18 @@
         border-style: solid;
         border-color: transparent transparent#2f2f2f transparent;
     }
+
+    tr:nth-child(even) {
+        background-color: #dddddd;
+    }
+
+    .popupphoto {
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        width: 50%;
+        border: 1px solid #555;
+    }
 </style>
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
