--- a/wisccc/templates/wisccc/wisc_cc_home.html
+++ b/wisccc/templates/wisccc/wisc_cc_home.html
@@ -58,15 +58,14 @@
             <img class="card-img-top" src="{% static 'img/checking_corn.jpg' %}"
               alt="Lafayette county agronomist checking corn emergence and planting depth">
             <div class="card-body">
-              <h5 class="card-title">Interested in participating?</h5>
+              <h5 class="card-title">Survey for 2025</h5>
               <p class="card-text">
-                Registration closed is for 2024-5.
-                If you would like to learn more or participate in the future please email <a
-                  href="mailto:mingram@wisc.edu">Mrill Ingram</a>
-                or click below to share your contact information.
+                Registration is open 2025-6.
+                Register here by clicking or email <a href="mailto:mingram@wisc.edu">Mrill Ingram</a>
+                if you have further questions
               </p>
 
-              <a href="{% url 'wisc_cc_interested' %}" class="btn btn-primary">Interested?</a>
+              <a href="{% url 'wisc_cc_register_1' %}" class="btn btn-primary">Register?</a>
             </div>
           </div>
           <!-- </a> -->
