--- a/wisccc/templates/wisccc/registration_table.html
+++ b/wisccc/templates/wisccc/registration_table.html
@@ -1,10 +1,10 @@
 {% extends 'wisccc/base_wisccc.html' %}
 {% load static %}
-{% block title %}Wisconsin Growers Citizen Science Network {% endblock %}
+
 
 {% load render_table from django_tables2 %}
 {% load bootstrap4 %}
-
+{% load crispy_forms_tags %}
 {% block content %}
 <style>
   .complete {
@@ -28,6 +28,30 @@
           </a>
 
         </h7>
+        {% if filter %}
+        <div class="col-sm-10">
+          <form action="" method="get" class="form">
+            <div class="form-row">
+              <div class="form-group col-md-4 mb-0">
+                {{ filter.form.survey_year|as_crispy_field }}
+              </div>
+              <div class="form-group col-md-4 mb-0">
+                {{ filter.form.farmer__id|as_crispy_field }}
+              </div>
+            </div>
+            <div class="form-row">
+              <div class="form-group col-md-4 mb-0">
+                {{ filter.form.farmer__last_name|as_crispy_field }}
+              </div>
+              <div class="form-group col-md-4 mb-0">
+                {{ filter.form.farmer__user__email|as_crispy_field }}
+              </div>
+            </div>
+
+            {% bootstrap_button 'filter' %}
+          </form>
+        </div>
+        {% endif %}
         <div class="col-md-12">
           {% render_table table %}
         </div>
